# rust-image

./: .gitignore  .prettierrc  AGENTS.md  Cargo.toml  dxdiag.txt  package-lock.json  package.json  rustfmt.toml  settings.yml
.github/instructions/: naming-conventions.instructions.md  patterns.instructions.md  tools.instructions.md
.github/prompts/: feature.prompt.md
abra/abra/: Cargo.toml
abra/abra/src/: lib.rs  prelude.rs
abra/abra/src/ffi/: mod.rs
abra/abra/src/plugin/: mod.rs
abra/ai/core/: Cargo.toml
abra/ai/core/src/: error.rs  image_model.rs  lib.rs  model.rs  onnx.rs  tensor.rs  tiled.rs
apps/alakazam/: .gitignore  Cargo.toml  package.json  webpack.config.mjs
apps/alakazam/actions/: clipboard.rs  mod.rs  open_file.rs  tabs.rs  window.rs
apps/alakazam/bindings/: Cargo.toml  build.rs  index.d.ts  package.json
apps/alakazam/bindings/src/: adjustments.rs  generate_image.rs  layer.rs  lib.rs  metadata.rs  project.rs
apps/alakazam/bindings/src/filters/: blur.rs  distort.rs  noise.rs
apps/alakazam/dialogs/color_picker/: mod.rs
apps/alakazam/scripts/: move-bindings.mjs  write-bindings-ready.mjs
apps/alakazam/src/: global.d.ts
apps/alakazam/src/client/: app.tsx  fonts.css  global.d.ts  renderer.tsx  tailwind.css  tsconfig.json
apps/alakazam/src/client/components/: canvas.tsx  project-tabs.tsx  project.tsx  status-bar.tsx  title-bar.tsx  tool-bar.tsx  top-tool-bar.tsx
apps/alakazam/src/client/components/panels/: layers.tsx  panels.tsx  properties.tsx
apps/alakazam/src/client/components/tools/: move.tsx
apps/alakazam/src/client/data/: menu-bar-items.ts
apps/alakazam/src/client/dialogs/: entry.tsx
apps/alakazam/src/client/dialogs/adjustments/: brightness-contrast.tsx  exposure.tsx  vibrance.tsx
apps/alakazam/src/client/dialogs/blur/: box-blur.tsx  gaussian-blur.tsx  lens-blur.tsx  motion-blur.tsx  surface-blur.tsx
apps/alakazam/src/client/dialogs/distort/: pinch.tsx  ripple.tsx
apps/alakazam/src/client/dialogs/helper/: common.tsx
apps/alakazam/src/client/dialogs/noise/: add-noise.tsx  despeckle.tsx  median.tsx
apps/alakazam/src/client/hooks/: file.ts  overlay-position.ts  projects.ts  toggle-adjustments.ts
apps/alakazam/src/client/lib/: projects.ts  strings.ts
apps/alakazam/src/client/pages/: projects.tsx  welcome.tsx
apps/alakazam/src/client/ui/: button.tsx  card.tsx  drag.tsx  input.tsx  option.tsx  select.tsx  slider.tsx  tabs-old.tsx  tabs.tsx  tooltip.tsx
apps/alakazam/src/renderer/: app.tsx  global.d.ts  renderer.tsx  tailwind.css  tsconfig.json
apps/alakazam/src/renderer/components/: canvas.tsx  project-tabs.tsx  project.tsx  status-bar.tsx  title-bar.tsx  tool-bar.tsx  top-tool-bar.tsx
apps/alakazam/src/renderer/components/panels/: panels.tsx
apps/alakazam/src/renderer/components/panels/layers/: panel.tsx
apps/alakazam/src/renderer/components/panels/properties/: document.tsx  panel.tsx  properties.tsx
apps/alakazam/src/renderer/components/tools/: selection.tsx
apps/alakazam/src/renderer/data/: commands.ts  menu-bar-items.ts
apps/alakazam/src/renderer/dialogs/: entry.tsx
apps/alakazam/src/renderer/dialogs/adjustments/: brightness-contrast.tsx  exposure.tsx  vibrance.tsx
apps/alakazam/src/renderer/dialogs/blur/: box-blur.tsx  gaussian-blur.tsx  lens-blur.tsx  motion-blur.tsx  surface-blur.tsx
apps/alakazam/src/renderer/dialogs/distort/: pinch.tsx  ripple.tsx
apps/alakazam/src/renderer/dialogs/helper/: common.tsx
apps/alakazam/src/renderer/dialogs/noise/: add-noise.tsx  despeckle.tsx  median.tsx
apps/alakazam/src/renderer/events/: project.ts
apps/alakazam/src/renderer/hooks/: numeric-input-validation.ts  projects.ts
apps/alakazam/src/renderer/lib/: cursor.ts  util.ts
apps/alakazam/src/renderer/pages/: projects.tsx  welcome.tsx
apps/alakazam/src/renderer/services/: accelerator.ts
apps/alakazam/src/renderer/ui/: button.tsx  card.tsx  drag.tsx  input.tsx  option.tsx  select.tsx  separator.tsx  slider.tsx  tabs-old.tsx  tabs.tsx  tooltip.tsx
apps/alakazam/src/server/: dialog.html  dialog.ts  index.html  main-menu.ts  main.ts  native-dialogs.ts  preload.ts  tsconfig.json
apps/alakazam/src/server/actions/: adjustments.ts
apps/alakazam/src/server/events/: clipboard.ts  dialogs.ts  drawing.ts  history.ts  image-data.ts  projects.ts  transform.ts
apps/alakazam/src/server/events/tools/: selection.ts
apps/alakazam/src/server/preload/: alakazam-history.ts  alakazam.ts  clipboard.ts  preload.ts  tools.ts
apps/alakazam/src/server/services/: selection.ts
apps/alakazam/src/server/util/: strings.ts
apps/alakazam/ui/: main.slint  welcome.slint
apps/alakazam/ui/components/: tools.slint
apps/alakazam/ui/components/menu-bar/: menu-globals.slint  menu.slint
apps/alakazam/ui/components/menu-bar/dropdowns/: edit.slint  file.slint
apps/alakazam/ui/components/menu-bar/util/: menu-bar.slint  menu-dropdown.slint
apps/alakazam/ui/components/panels/layers/: layer.slint  layers.slint
apps/alakazam/ui/components/tabs/: tab-bar.slint
apps/alakazam/ui/components/title-bar/: buttons.slint  title-bar-dialog.slint
apps/alakazam/ui/dialogs/: window-content-base.slint
apps/alakazam/ui/dialogs/new-project/: color.slint  constants.slint  main.slint  size-row.slint
apps/alakazam/ui/globals/: app-state.slint  dialog-state.slint
bindings/: AGENTS.md
bindings/javascript/: .gitignore  README.md  main.js  package.json
deployment/: compare_cpu_dml.py  lower_einsum_to_batched_matmul.py
deployment/tests/: test_lower_einsum.py
docs/: CANVAS_LAYER_API_REVIEW.md  FLUENT_API_MIGRATION.md  LIBRARY_CONSISTENCY_REPORT.md  NAMING_ANALYSIS.md
docs/ai/: BATCH_INFERENCE.md  GPU_INFERENCE.md  QUANTIZED_MODELS.md  SMALLER_MODELS.md
examples/adjustments/: main.rs
examples/blend/: main.rs
examples/blur/: Cargo.toml  main.rs
examples/brush/: main.rs
examples/drawing/: Cargo.toml  main.rs
examples/gradient/: Cargo.toml  main.rs
examples/layer_effects/: Cargo.toml  main.rs
examples/layers/: main.rs
examples/mask/: main.rs
examples/plugins/: Cargo.toml  main.rs
examples/rotate/: main.rs
(+181 files in other folders)
