[workspace]
members = [
  # "packages/rxrs",
  "packages/abra",
  "packages/core/*",
  "packages/plugins/*",
  # "packages/alakazam",
  "tests/*",
]
default-members = [
  # "packages/rxrs",
  # "packages/abra",
  # "packages/alakazam",
  "tests/*",
]

resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
rayon = "1.11.0"
rand = "0.9.2"
ndarray = { version = "0.17.1", features = ["rayon"] }

# Packages
abra = { path = "./packages/abra" }
adjustments = { path = "./packages/core/adjustments" }
canvas = { path = "./packages/core/canvas" }
core = { path = "./packages/core/core" }
drawing = { path = "./packages/core/drawing" }
filters = { path = "./packages/core/filters" }
mask = { path = "./packages/core/mask" }

# Abra Plugins
collage = { path = "./packages/plugins/collage" }

[workspace.dependencies.uuid]
version = "1.18.1"
features = ["v4"]
