[package]
name = "abra-ai-core"
version = "1.0.0"
edition = "2024"
description = "Lightweight AI model loading for Abra"

[dependencies]
abra-core = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
saphyr = { workspace = true }

# ONNX Runtime support (required)
ort = { workspace = true }

[features]
default = []
onnx = []

[lib]
crate-type = ["rlib"]
